--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "babel-preset-modern-browsers": "^9.0.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.0.0",
     "gulp-changed": "^3.1.0",
