--- a/samples/package.json
+++ b/samples/package.json
@@ -4,11 +4,19 @@
   "description": "",
   "main": "AX6Dom-test.index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config webpack.config.js",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
