--- a/samples/package.json
+++ b/samples/package.json
@@ -13,10 +13,14 @@
   "devDependencies": {
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
   },
   "dependencies": {
+    "jqlite": "^0.2.42",
     "lodash": "^4.17.4"
   }
 }
