--- a/samples/package.json
+++ b/samples/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "mocha": "^3.4.2",
+    "chai": "^4.0.2",
     "jqlite": "^0.2.42",
     "lodash": "^4.17.4"
   }
