--- a/samples/package.json
+++ b/samples/package.json
@@ -23,9 +23,9 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "mocha": "^3.4.2",
     "chai": "^4.0.2",
-    "jqlite": "^0.2.42",
-    "lodash": "^4.17.4"
+    "jqmin": "^0.1.0",
+    "lodash": "^4.17.4",
+    "mocha": "^3.4.2"
   }
 }
