--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-babel": "^6.0.0",
     "gulp-changed": "^3.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-exec": "^2.1.3",
     "gulp-minify": "^1.0.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
