--- a/samples/package.json
+++ b/samples/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "assets-webpack-plugin": "^3.5.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
@@ -32,6 +33,8 @@
     "axios": "^0.16.2",
     "chai": "^4.0.2",
     "jqmin": "^0.1.0",
+    "jquery": "^3.2.1",
+    "materialize-css": "^0.100.1",
     "mocha": "^3.4.2"
   }
 }
