--- a/samples/package.json
+++ b/samples/package.json
@@ -35,6 +35,8 @@
     "jqmin": "^0.1.0",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.1",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
