--- a/react/package.json
+++ b/react/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ax6ui-sample",
+  "name": "ax6ui-react-sample",
   "version": "1.0.0",
   "description": "",
-  "main": "AX6Dom-test.index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "build": "webpack"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "babel-core": "^6.25.0",
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-modern-browsers": "^9.0.2",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
@@ -30,8 +31,10 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "ax6ui": "^0.7.10",
     "axios": "^0.16.2",
     "jqmin": "^0.1.0",
-    "materialize-css": "^0.100.1"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
